<resources>
    <string name="app_name">Appwrite Demo Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_accounts">Accounts</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_database">Database</string>
    <string name="menu_storage">Storage</string>
    <string name="menu_functions">Functions</string>
    <string name="menu_localization">Localization</string>
    <string name="menu_avatars">Avatars</string>

    <string name="appwrite_host">[HOST]</string>
    <string name="appwrite_endpoint">https://[HOST]/v1</string>
    <string name="appwrite_project">[PROJECT]</string>
    <string name="appwrite_database">[DATABASE]</string>
    <string name="appwrite_collection">[COLLECTION]</string>
    <string name="appwrite_storage">[BUCKET]</string>
    <string name="appwrite_callback">appwrite-callback-[PROJECT]</string>

</resources>