<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_teams" />
        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_database" />
        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_storage" />
        <item
            android:id="@+id/nav_functions"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_functions" />
        <item
            android:id="@+id/nav_localization"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_localization" />
        <item
            android:id="@+id/nav_avatars"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_avatars" />
    </group>
</menu>